add delete method